--- a/OrangeSMS/app/src/main/res/layout/activity_main.xml
+++ b/OrangeSMS/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    style="@style/Theme.AppCompat.dar"
     tools:context=".MainActivity">
 
     <TextView
@@ -26,14 +27,26 @@
         android:text="@string/textView2Text"
         android:textSize="20sp"
         android:layout_below="@+id/textView1"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/textView3Text"
+        android:textSize="15sp"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:textColor="#b7ff1109"
+        android:layout_marginTop="10dp"/>
 
     <Button
         android:id="@+id/btnChooseContact"
         android:text="@string/btnChooseContactText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView2"
+        android:layout_below="@id/textView3"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"/>
 
